Added basic styles to client app and refactor event module

--- a/apps/client/src/index.html
+++ b/apps/client/src/index.html
@@ -1,13 +1,36 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Client</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Client</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Negocio Seguro</h1>
+
+      <nav>
+        <a href="/" class="current">Dashboard</a>
+
+        <a href="/">Addresses</a>
+
+        <a href="/">Buttons</a>
+
+        <a href="/">Alerts</a>
+
+        <a href="/">Profile</a>
+      </nav>
+    </header>
+    <main>
+      <h1>Dashboard</h1>
+      <app-root></app-root>
+    </main>
+
+    <!-- <footer>
+      <p>Jane Smith's website.</p>
+    </footer> -->
+  </body>
 </html>
